# MultiScaleTruchet

./: 03.path  04.path  05.path  08.path  09.path  10.path  15.path  Makefile  README.md  main.py  pyproject.toml  quadtree.py  scale.py  svg.py
multiscaletruchet/: __init__.py  quadtree.py
svgs/: 01.path  02.path  06.path  07.path  11.path  12.path  13.path  14.path
