[tool.poetry]
name = "multiscaletruchet"
version = "0.1.0"
description = "Multiscale truchet tileset"
authors = ["Helena Rasche <hxr@hx42.org>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
mst-single = 'bin.single:main'
mst-scale = 'bin.scale:main'
